chore: update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-client-kit",
   "version": "1.0.1",
-  "description": "一套纯前端 AI 集成套件，支持多模型接入、聊天面板、Function Calling，适用于任意 Web 应用。",
+  "description": "适用于任意前端框架的 AI 集成套件，支持多模型接入、聊天面板、Function Calling 等。",
   "author": {
     "name": "Hughe5",
     "email": "2100921003@qq.com",
