feat: 默认 tools 机制 & 处理相对时间的 tool

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "pure-javascript"
   ],
   "dependencies": {
+    "chrono-node": "^2.8.3",
     "dayjs": "^1.11.13",
     "marked": "^16.0.0"
   },
