--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc -p tsconfig.json",
-    "lint": "eslint . --ext .js,.mjs,.cjs --fix",
-    "lint:check": "eslint . --ext .js,.mjs,.cjs",
+    "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx --fix",
+    "lint:check": "eslint . --ext .js,.mjs,.cjs,.ts,.tsx",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "test": "vitest",
@@ -69,8 +69,10 @@
     "eslint": "^9.30.1",
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.0.2",
     "vitest": "^3.2.4"
   }
