--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "chrono-node": "^2.8.3",
-    "dayjs": "^1.11.13",
-    "marked": "^16.0.0"
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
