--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-client-kit",
   "version": "2.0.5",
-  "description": "适用于任意前端框架的 AI 集成套件，支持多模型接入、聊天面板、Function Calling 等。",
+  "description": "全 JavaScript 生态适用的 AI 集成套件，覆盖 Node.js 与任意前端框架，多模型兼容、聊天面板、Agent、Function Calling 等。",
   "author": {
     "name": "Hughe5",
     "email": "2100921003@qq.com",
