--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "chrono-node": "^2.8.3",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
+    "micromark": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/lodash": "^4.17.20",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.30.1",
     "eslint-plugin-prettier": "^5.5.1",
