--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "chrono-node": "^2.8.3",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
-    "micromark": "^4.0.2"
+    "micromark": "^4.0.2",
+    "micromark-extension-gfm": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
