--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-client-kit",
-  "version": "2.0.16",
+  "version": "2.0.17",
   "description": "全 JavaScript 生态适用的 AI 集成套件，覆盖 Node.js 与任意前端框架，多模型兼容、聊天面板、Agent、Function Calling 等。",
   "author": {
     "name": "Hughe5",
@@ -61,9 +61,15 @@
     "ajv": "^8.17.1",
     "chrono-node": "^2.8.3",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.7",
     "lodash": "^4.17.21",
-    "micromark": "^4.0.2",
-    "micromark-extension-gfm": "^3.0.0"
+    "prettier": "^3.6.2",
+    "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -73,7 +79,6 @@
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
-    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.41.0",
     "vite": "^7.0.2",
