--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "chrono-node": "^2.8.3",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.7",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "prettier": "^3.6.2",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@types/lodash": "^4.17.20",
+    "@types/lodash-es": "^4.17.12",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.30.1",
     "eslint-plugin-prettier": "^5.5.1",
