chore: 改一些文案

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-client-kit",
-  "version": "2.0.23",
-  "description": "全 JavaScript 生态适用的 AI 集成套件，覆盖 Node.js 与任意前端框架，多模型兼容、聊天面板、Agent、Function Calling 等。",
+  "version": "2.0.24",
+  "description": "全 JavaScript 生态适用的 AI 集成套件，覆盖 Node.js 与任意前端框架，兼容多种大模型、聊天面板、Function Calling、Agent、工作流等。",
   "author": {
     "name": "Hughe5",
     "email": "2100921003@qq.com",
