chore: 改 prettier 配置

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": false,
-  "printWidth": 100,
-  "htmlWhitespaceSensitivity": "ignore"
+  "printWidth": 100
 }
